--- a/index.html
+++ b/index.html
@@ -466,62 +466,62 @@
     
     <div class="pricing-grid">
       <div class="price-card">
-        <h3 class="plan-title">SaaS Flex</h3>
-        <p class="plan-desc">Para quem busca liberdade sem fidelidade longa.</p>
+        <h3 class="plan-title">Nano</h3>
+        <p class="plan-desc">Para quem está saindo das planilhas e quer organização rápida.</p>
         <div class="price-box">
-          <span class="price-value">R$ 60</span><span class="price-suffix">/mês</span>
+          <span class="price-value">R$ 49</span><span class="price-suffix">/mês</span>
         </div>
         <span class="billing-note">Cobrança recorrente mensal</span>
         <ul class="feature-list">
           <li><i class="fas fa-check-circle"></i> Acesso Multi-device Android e Pc</li>
-          <li><i class="fas fa-rocket"></i> Escolha 1 sistema Legacy</li>
-          <li><i class="fas fa-ticket-alt"></i> 3 Tickets Suporte/mês</li>
+          <li><i class="fas fa-rocket"></i> Acesso: Apenas 1 Módulo</li>
+          <li><i class="fas fa-ticket-alt"></i> Suporte Whatsapp :Resposta em até 48h.</li>
         </ul>
-        <button class="btn-select-plan" onclick="openPayment('SaaS Flex Mensal', 60)">Assinar Mensal</button>
+        <button class="btn-select-plan" onclick="openPayment('SaaS Flex Mensal', 60)">Assinar Nano</button>
       </div>
 
       <div class="price-card">
-        <h3 class="plan-title">Starter</h3>
-        <p class="plan-desc">O pacote inicial ideal para organizar a casa.</p>
+        <h3 class="plan-title">BUSINESS (O Combo)</h3>
+        <p class="plan-desc">O equilíbrio perfeito para quem quer integrar o fluxo de trabalho.</p>
         <div class="price-box">
-          <span class="price-value">R$95</span><span class="price-suffix">/mês</span>
+          <span class="price-value">R$79,90</span><span class="price-suffix">/mês</span>
         </div>
         <span class="billing-note">Cobrança recorrente mensal</span>
         <ul class="feature-list">
           <li><i class="fas fa-check-circle"></i> Acesso Multi-device Android e Pc</li>
-          <li><i class="fas fa-laptop-code"></i> Escolha 2 sistemas Legacy</li>
-          <li><i class="fas fa-ticket-alt"></i> 5 Tickets Suporte/mês</li>
+          <li><i class="fas fa-laptop-code"></i> Acesso: 2 Módulos à escolha</li>
+          <li><i class="fas fa-ticket-alt"></i> Suporte Whatsapp :Resposta em até 24h.</li>
         </ul>
-        <button class="btn-select-plan" onclick="openPayment('Starter, 95)">Assinar Trimestral</button>
+        <button class="btn-select-plan" onclick="openPayment('Starter, 95)">Assinar BUSINESS</button>
       </div>
 
       <div class="price-card featured">
-        <div class="badge-best">MAIS POPULAR</div>
+        <div class="badge-best">Legacy Pro</div>
         <h3 class="plan-title">Manager <i class="fas fa-crown" style="color: #facc15;"></i></h3>
         <p class="plan-desc">Gestão completa e suporte estendido.</p>
         <div class="price-box">
-          <span class="price-value">R$150</span><span class="price-suffix">/mês</span>
+          <span class="price-value">R$109,90</span><span class="price-suffix">/mês</span>
         </div>
         <span class="billing-note">Cobrança recorrente mensal</span>
         <ul class="feature-list">
         <li><i class="fas fa-check-circle"></i> Acesso Multi-device Android e Pc</li>
-          <li><i class="fas fa-laptop-code"></i> Acesso exclusivo à plataforma Legacy</li>
-          <li><i class="fas fa-ticket-alt"></i> 10 Tickets Suporte/mês</li>
+          <li><i class="fas fa-laptop-code"></i> Acesso: Todos os Módulos Liberados</li>
+          <li><i class="fas fa-ticket-alt"></i> Suporte Contínuo WhatsApp (Horário Comercial).</li>
         </ul>
-        <button class="btn-select-plan" onclick="openPayment('Manager Anual', 150)">Assinar Anual</button>
+        <button class="btn-select-plan" onclick="openPayment('Manager Anual', 150)">Assinar Legacy Pro</button>
       </div>
 
       <div class="price-card">
-        <h3 class="plan-title">Controller</h3>
+        <h3 class="plan-title">LEGACY VIP</h3>
         <p class="plan-desc">Equilíbrio perfeito entre custo e prazo.</p>
         <div class="price-box">
-          <span class="price-value">R$175</span><span class="price-suffix">/mês</span>
+          <span class="price-value">R$159,90</span><span class="price-suffix">/mês</span>
         </div>
         <span class="billing-note">Cobrança recorrente mensal</span>
         <ul class="feature-list">
           <li><i class="fas fa-check-circle"></i> Acesso Multi-device Android e Pc</li>
           <li><i class="fas fa-laptop-code"></i> Acesso exclusivo à plataforma Legacy</li>
-          <li><i class="fas fa-ticket-alt"></i> Suporte Contínuo Seg. a Sáb</li>
+          <li><i class="fas fa-ticket-alt"></i> Tipo de Suporte: Consultivo</li>
         </ul>
         <button class="btn-select-plan" onclick="openPayment('Controller Semestral', 300)">Assinar Semestral</button>
       </div>
