--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
   <nav class="header-nav">
     <a href="#" class="nav-link active"><i class="fas fa-chart-pie"></i> Dashboard</a>
     <a href="#planos" class="nav-link"><i class="fas fa-layer-group"></i> Planos</a>
-    <a href="#" class="nav-link"><i class="fas fa-book"></i> Base/KB</a>
+    <a href="#" class="nav-link"><i class="fas fa-cube"></i> Sistemas</a>
     <a href="https://wa.me/5522992497662" target="_blank" class="nav-link"><i class="fas fa-headset"></i> Suporte</a>
     <a href="https://legacysistema.github.io/legacy-user"
    target="_blank"
